--- a/gd_content.css
+++ b/gd_content.css
@@ -17,6 +17,12 @@
     background: auto !important;
 }
 
+.gd4chrome_clickreload{
+    font-weight: bold;
+    color: rgb(255,100,100);
+
+}
+
 .gd4chrome_title{
 color: rgb(255, 255, 255);
 display: block;
@@ -42,10 +48,25 @@ background: auto !important;
     margin-bottom: 10px
 }
 
-.gd4chrome_col1{
+.gd4chrome_col1 {
     margin-bottom: 2px;
     margin-right: 10px;
     padding-left: 10px;
+    width: 130px;
+}
+
+
+.gd4chrome_col1 a:link, .gd4chrome_col1 a:visited {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+.gd4chrome_etl_status_OK{
+    color: #99FF99;
+}
+
+.gd4chrome_etl_status_ERROR{
+    color: #FF6B6B;
 }
 
 .gd4chrome_close{
@@ -59,6 +80,16 @@ background: auto !important;
     margin-top: 5px;
     vertical-align: top;
     text-decoration: none;
+}
+
+.gd4chrome_value a:link, .gd4chrome_value a:visited {
+    color: rgb(0, 170, 255);
+    text-decoration: none;
+}
+
+.gd4chrome_value a:hover {
+    color: rgb(0, 170, 255);
+    text-decoration: underline;
 }
 
 .gd4chrome_value{
