--- a/gd_cc_log.css
+++ b/gd_cc_log.css
@@ -12,7 +12,7 @@ pre.shifted_log {
 	color: rgb(195, 211, 229);
 	cursor: auto;
 	display: inline;
-	font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
+	font-family: Avenir,sans-serif;
 	font-size: 10px;
 	font-weight: bold;
 	height: auto;
@@ -26,14 +26,16 @@ pre.shifted_log {
 }
 
 .graph_name{
-	color: white;
+	xcolor: white;
+	color: #999;
 	left: 0px;
 	text-align: left;
 	xfont-weight: bold;
 
 }
 .graph_run_time{
-	color: white;
+	xcolor: white;
+	color: #999;
 	padding-left: 5px;
 	left: 0px;
 
@@ -42,13 +44,14 @@ pre.shifted_log {
 #cc_head {
 	background-attachment: scroll;
 	background-clip: border-box;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 	background-origin: padding-box;
 	background-size: auto;
 
 	color: rgb(51, 51, 51);
 	display: block;
-	font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
+	font-family: Avenir,sans-serif;
 	font-size: 12px;
 	height: 50px;
 	width: 500px;
@@ -67,7 +70,7 @@ pre.shifted_log {
 
 .cc_head_label {
 	bottom: 2px;
-	color: white;
+	color: #999;
 	cursor: pointer;
 	font-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 	font-size: 12px;
@@ -75,15 +78,27 @@ pre.shifted_log {
 	font-variant: normal;
 	font-weight: bold;
 	height: auto;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 	width: auto;
-	padding-bottom: 0px;
+	padding-bottom: 4px;
 	padding-left: 0px;
 	padding-right: 0px;
 	padding-top: 0px;
 	position: relative;
 	text-decoration: none;
+	border-bottom: 3px solid #000;	
+
+	-webkit-transition: .2s;
+	transition: .2s;	
 } 
+
+.cc_head_label:hover{
+	color: white;
+	border-bottom: 3px solid #999;
+}
+
+
 
 .cc_head_links{
 	display: inline-block;
@@ -91,7 +106,8 @@ pre.shifted_log {
 	left: 0px;
 	padding-top: 5px;
 	width: 450px;
-	background-color: #39414d;	
+	xbackground-color: #39414d;
+	background-color: #000000;	
 }
 
 .cc_head_link {
@@ -101,28 +117,33 @@ pre.shifted_log {
 	cursor: auto;
 	font-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 	font-weight: 300;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 	text-decoration: none;
 } 
 
 .cc_head_link:visited {
 	color: #c2d3e4;
 	text-decoration: none;
-	background-color: #39414d;	
+	xbackground-color: #39414d;
+	background-color: #000000;
 } 
 
 .cc_head_link:hover {
 	color: white;
 	text-decoration: none;
-	background-color: #39414d;	
+	xbackground-color: #39414d;
+	background-color: #000000;
 } 
 
 .close{
-	font-weight: 700;
+	font-weight: 500;
 	position: fixed;
 	right: 10px;
 	top: 5px;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
+	color: white;
 }
 
 a.goto_error:link, a.goto_error:visited, a.goto_error:hover{
@@ -134,7 +155,8 @@ a.goto_error:link, a.goto_error:visited, a.goto_error:hover{
 	padding-left: 15px;
 	font-weight: normal;
 	font-style: italic;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 }
 
 a.goto_err_data:link, a.goto_err_data:visited, a.goto_err_data:hover{
@@ -146,7 +168,8 @@ a.goto_err_data:link, a.goto_err_data:visited, a.goto_err_data:hover{
 	padding-left: 15px;
 	font-weight: normal;
 	font-style: italic;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 }
 
 a.goto_running:link, a.goto_running:visited, a.goto_running:hover{
@@ -155,7 +178,8 @@ a.goto_running:link, a.goto_running:visited, a.goto_running:hover{
 	position: fixed;
 	font-weight: normal;
 	font-style: italic;
-	background-color: #39414d;	
+	xbackground-color: #39414d;
+	background-color: #000000;
 }
 
 a.goto_success:link, a.goto_success:visited, a.goto_success:hover{
@@ -164,7 +188,8 @@ a.goto_success:link, a.goto_success:visited, a.goto_success:hover{
 	position: fixed;
 	font-weight: normal;
 	font-style: italic;
-	background-color: #39414d;	
+	xbackground-color: #39414d;
+	background-color: #000000;
 }
 
 a.run_refresh:link, a.run_refresh:visited, a.run_refresh:hover{
@@ -173,7 +198,8 @@ a.run_refresh:link, a.run_refresh:visited, a.run_refresh:hover{
 	right: 45px;
 	padding-left: 10px;
 	font-weight: normal;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 	text-decoration: none;
 }
 
@@ -186,7 +212,8 @@ a.run_refresh:link, a.run_refresh:visited, a.run_refresh:hover{
 
 .cc_head_labels{
 	margin-top: 10px;
-	background-color: #39414d;
+	xbackground-color: #39414d;
+	background-color: #000000;
 
 }
 
@@ -195,7 +222,8 @@ a.run_refresh:link, a.run_refresh:visited, a.run_refresh:hover{
 color: rgb(194, 211, 228);
 cursor: auto;
 display: inline;
-font-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+xfont-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+font-family: Avenir,sans-serif;
 font-size: 20px;
 font-style: normal;
 font-variant: normal;
