--- a/popup.css
+++ b/popup.css
@@ -16,6 +16,7 @@ body {
   font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
   font-size: 12px;
   color: #333;
+  margin: 0px;
 }
 
 .spacer {
