--- a/options.css
+++ b/options.css
@@ -32,3 +32,7 @@ html {
             padding : 3px;
             clear:both;
         }
+
+        #wl_domains {
+            width: 200px;
+        }
