--- a/popup_new.css
+++ b/popup_new.css
@@ -136,7 +136,7 @@ div.options{
 position: absolute;
 padding-bottom: 0px;
 top: 0px;
-left: 715px;
+right: 0;
 border: 0;
 text-decoration: none;
 height: 20px;
