--- a/help.css
+++ b/help.css
@@ -150,6 +150,8 @@ margin-left: 0px;
   line-height: 18px;
   padding-bottom: 1px;
   color: white;
+  font-size: 16px;
+  font-family: serif;
 }
 
 .footer a:visited {
