--- a/help.css
+++ b/help.css
@@ -431,7 +431,7 @@ a.gd4chrome_etl_status_OK:hover,a.gd4chrome_etl_status_ERROR:hover,a.gd4chrome_e
   margin-right: 0px;
   margin-top: 0px;
   padding-top: 1px;
-  padding-bottom: 2px;
+  padding-bottom: 4px;
   padding-left: 10px;
   xposition: fixed;
   right: 0px;
@@ -637,4 +637,70 @@ p {
 .hlp_desc{
   position: absolute;
   left: 80px;
+}
+
+#cc_head_writers_box {
+  background-color: #000000;
+  background-origin: padding-box;
+  background-size: auto;
+
+  color: rgb(51, 51, 51);
+  xdisplay: block;
+  font-family: Avenir,sans-serif;
+  font-size: 12px;
+  min-height: 50px;
+  max-height: 198px;
+  resize: vertical;
+  width: 500px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding-top: 1px;
+  padding-bottom: 0px;
+  position: fixed;
+  right: 20px;
+  top: 73px;
+  z-index: 4997;
+  display: inline;
+  overflow-y: scroll;
+}
+
+#cc_head_writers_box:hover{
+  xmax-height: 90%;
+  max-height: calc(100% - 90px);
+  max-height: -webkit-calc(100% - 90px);
+}
+
+
+.cc_head_writers{
+  display: table;
+  border-spacing: 0px;
+  padding-bottom: 5px;
+
+}
+
+.hidden{
+  display: none;
+}
+
+#cc_head_writers_hider{
+  width: 490px;
+  height: 20px;
+  font-family: Avenir,sans-serif;
+  font-size: 13px;
+  color: #999;
+  background-color: #000;
+  z-index: 5000;
+
+  margin-left: 30px;
+  xmargin-top: 5px;
+  text-align: center;
+  border-top: 1px #777 dashed;
+  cursor: hand;
+}
+
+#cc_head_writers_hider:hover {
+  color: #fff;
+  background-color: #777;
 }
