--- a/popup_new.css
+++ b/popup_new.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar { 
+    display: none; 
+}
+
       .appHeader {
         position: relative;
         left: 0;
@@ -52,7 +56,7 @@ background: url("logo_new@1x.png") no-repeat 0 0;
 xwidth: 121px;
 
 float: left;
-margin: 7px 18px 0 20px;
+margin: 7px 8px 0 10px;
 cursor: pointer;
 -webkit-transition: .2s;
 transition: .2s;
@@ -77,7 +81,7 @@ height: 30px;
 #navigation {
 position: absolute;
 top: 0px;
-left: 40px;
+left: 25px;
 white-space: nowrap;
 display: inline;
 
@@ -150,7 +154,7 @@ border: 0;
 text-decoration: none;
 height: 20px;
 line-height: 20px;
-width: 20px;
+width: 13px;
 }
 
 a#optLink {
@@ -160,7 +164,7 @@ a#optLink {
 }
 
 .options2 a {
-top: 14px;
+top: 24px;
 }
 
 .options3 a {
@@ -168,7 +172,7 @@ top: 28px;
 }  
 
 .options a {
-font-size: 11px;
+font-size: 13px;
 xpadding: 0;
 color: #4a90e2;
 text-decoration: none;
@@ -210,7 +214,7 @@ text-decoration: none;
   xborder-color: #4a90e2;
   font-weight: 700;
   margin-left: 5px;
-  padding-left: 5px;
+  padding-left: 2px;
   padding-right: 5px;
   font-size: 16px;
   line-height: 18px;
