--- a/help.css
+++ b/help.css
@@ -747,3 +747,81 @@ p {
   color: #fff;
   background-color: #777;
 }
+
+
+
+.btn {
+  -webkit-border-radius: 14;
+  -moz-border-radius: 14;
+  border-radius: 16px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 9px;
+  padding: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+  margin-left: 0px;
+  margin-right: 1px;
+  text-decoration: none;
+}
+
+.btn_f {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  padding-left: 3px;
+  padding-right: 2px;  
+}
+
+.btn_i {
+  background: #329419;
+  background-image: -webkit-linear-gradient(top, #329419, #26801e);
+  background-image: -moz-linear-gradient(top, #329419, #26801e);
+  background-image: -ms-linear-gradient(top, #329419, #26801e);
+  background-image: -o-linear-gradient(top, #329419, #26801e);
+  background-image: linear-gradient(to bottom, #329419, #26801e);
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.btn_x {
+  background: #d93434;
+  background-image: -webkit-linear-gradient(top, #d93434, #b82c2c);
+  background-image: -moz-linear-gradient(top, #d93434, #b82c2c);
+  background-image: -ms-linear-gradient(top, #d93434, #b82c2c);
+  background-image: -o-linear-gradient(top, #d93434, #b82c2c);
+  background-image: linear-gradient(to bottom, #d93434, #b82c2c);
+  padding-left: 5px;
+  padding-right: 5px;  
+}
+
+.btn_all{
+  background: #d95534;
+  background-image: -webkit-linear-gradient(top, #d95534, #b84d2c);
+  background-image: -moz-linear-gradient(top, #d95534, #b84d2c);
+  background-image: -ms-linear-gradient(top, #d95534, #b84d2c);
+  background-image: -o-linear-gradient(top, #d95534, #b84d2c);
+  background-image: linear-gradient(to bottom, #d95534, #b84d2c);
+}
+.btn_id {
+  background: #329419;
+  background-image: -webkit-linear-gradient(top, #329419, #26801e);
+  background-image: -moz-linear-gradient(top, #329419, #26801e);
+  background-image: -ms-linear-gradient(top, #329419, #26801e);
+  background-image: -o-linear-gradient(top, #329419, #26801e);
+  background-image: linear-gradient(to bottom, #329419, #26801e);
+  padding-left: 3px;
+  padding-right: 3px;  
+}
+
+.btn_nnd {
+  background: #919191;
+  background-image: -webkit-linear-gradient(top, #919191, #4d4d4d);
+  background-image: -moz-linear-gradient(top, #919191, #4d4d4d);
+  background-image: -ms-linear-gradient(top, #919191, #4d4d4d);
+  background-image: -o-linear-gradient(top, #919191, #4d4d4d);
+  background-image: linear-gradient(to bottom, #919191, #4d4d4d);
+}
