--- a/gd_content.css
+++ b/gd_content.css
@@ -52,6 +52,10 @@ overflow: hidden;
     text-decoration: underline;
 }
 
+.gd4chrome_value_element {
+    color: #f93 !important
+}
+
 .gd4chrome_value{
     border-collapse: separate;
     color: rgb(0, 170, 255);
